--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <script>
-      const path = window.location.pathname;
+      const path = window.location.pathname.replace(/^\/Coca/, "");
       window.location.href = `/Coca/index.html?redirect=${encodeURIComponent(path)}`;
     </script>
 </head>
