--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Coca</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></Box>
     <script type="module" src="frontend/src/main.jsx"></script>
   </body>
 </html>
